--- a/layout/base.j2
+++ b/layout/base.j2
@@ -1,9 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <link href="http://fonts.googleapis.com/css?family=Anton"
-            rel="stylesheet" type="text/css">
-            <title>Hyde Starter Kit {% if resource.meta.title-%}
+            <title>Homepage of Jim Faes {% if resource.meta.title-%}
                 | {{ resource.meta.title}}{%-endif %}</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="{{ media_url('css/style.css') }}">
@@ -15,8 +13,7 @@
     <body>
         <header>
             <hgroup>
-            <h1><span>Hyde</span> Starter Kit</h1>
-            <h2>Know your tool</h2>
+            <h1>Jim Faes</h1>
             </hgroup>
         </header>
         <nav>
