--- a/layout/macros.j2
+++ b/layout/macros.j2
@@ -1,46 +1,40 @@
-{# Generates the main and basic menu from context data in the site's
-   configuration file.
-#}
-{% macro render_basic_menu() -%}
-<ul class="basic">
-{% for menu_item in menu -%}
-    <li><a {% if (menu_item.url == resource.url) %}class="selected"{% endif -%}
-        href="{{ content_url(menu_item.url) }}">{{ menu_item.title }}</a></li>
-{%- endfor %}
-</ul>
-{%- endmacro %}
-
-
-{# Generates the advanced menu from all files located in the content/advanced
-   folder. Only advanced section files have 'index' metadata, so we can be
-   certain that no other files will creep in.
-#}
-{% macro render_advanced_menu() -%}
-<ul class="advanced">
-{% for res in site.content.walk_resources_sorted_by_index() %}
-    <li><a {% if (res.url == resource.url) %}class="selected"{% endif -%}
-        href="{{ res.full_url }}">{{ res.meta.title }}
-        </a></li>
-{% endfor %}
-</ul>
-{%- endmacro %}
-
-
-{# Advanced topics macro. Renders navigation at the end of an advanced
-   article. It also depends on 'index' metadata.
-#}
-{% macro render_bottom_article_nav() %}
-<div class="bottom_article_nav">
-{% if resource.next_by_index is not none -%}
-    <div class="next"><a href="{{ resource.next_by_index.full_url }}">
-    {{ resource.next_by_index.meta.title }}</a>
-    &gt;</div>
-{%- endif %}
-
-{% if resource.prev_by_index is not none -%}
-    <div class="prev">&lt; <a href="{{ resource.prev_by_index.full_url }}">
-    {{ resource.prev_by_index.meta.title }}</a>
-    </div>
-{%- endif %}
-</div>
+{% macro render_excerpt(res, class=None) %}
+{% refer to res.url as post %}
+<article {{'class='~class if class }}>
+<h3><a href="{{ content_url(res.url) }}">{{ res.meta.title }}</a></h3>
+<a href="{{ content_url(res.url) }}">{{ post.image|markdown|typogrify }}</a>
+{{ post.excerpt|markdown|typogrify }}
+<time datetime="{{ res.meta.created.strftime('%Y-%m-%d') }}">
+    Posted: {{ res.meta.created.strftime('%a, %d %b %Y') }}
+</time>
+</article>
 {% endmacro %}
+
+{% macro render_nav(menu, cls=None) -%}
+{% if menu -%}
+<nav {{'class='~cls if cls }}>
+    <ul>
+        {% for item in menu -%}
+        {% set active = False -%}
+        {% if item.type == 'page' -%}
+            {% set active = (resource.url ==
+                site.content.resource_from_relative_path(item.url).url) -%}
+        {% else -%}
+            {% set active = (node ==
+                site.content.node_from_relative_path(item.url)) -%}
+        {%- endif %}
+        {% set classes = ['button', 'white'] -%}
+        {% do classes.append('active') if active -%}
+        {% do classes.append(item.css_class) if item.css_class -%}
+        <li>
+            <a title="{{ item.description }}"
+                class="{{ classes|join(' ') }}"
+                href="{{ content_url(item.url) }}">
+                {{ item.name }}
+            </a>
+        </li>
+        {%- endfor %}
+    </ul>
+</nav>
+{%- endif %}
+{%- endmacro %}
