--- a/deploy/media/css/site.css
+++ b/deploy/media/css/site.css
@@ -60,7 +60,6 @@ body{
     background-color: #efefef;
 padding: 0;
 margin: 0;
-        text-shadow: 0px 2px 0px #efefef;
 }
 
 #container{
@@ -118,8 +117,6 @@ padding: .4em 1.5em .42em;
 /* white */
 .white {
     color: #606060;
-    border: solid 1px #b7b7b7;
-    background: #fff;
 }
 .white:hover {
     background: #ededed;
@@ -129,7 +126,7 @@ padding: .4em 1.5em .42em;
 }
 
 .banner{
-    border-bottom: 12px solid #222;
+    border-bottom: 2px solid #222;
     padding: 0 12px;
     position: relative;
 }
@@ -189,7 +186,6 @@ padding: .4em 1.5em .42em;
 h1.title{
     font-size: 24px;
     line-height: 36px;
-    border-bottom: 1px solid #ccc;
 }
 
 .blog_excerpt h3{
@@ -215,7 +211,6 @@ section.content{
     background-color: #ededed;
     list-style-type: none;
     margin-bottom: 24px;
-    padding: 12px;
 }
 
 .listing li:nth-child(2){
@@ -227,19 +222,19 @@ section.content{
 }
 
 .listing li p{
-    font-size: 10px;
-    line-height: 12px;
+    font-size: 1em;
     margin-bottom: 12px;
 }
 
 
 .listing h3{
-    border-bottom: 1px solid #ccc;
-    font-size: 12px;
+    font-size: 1.2em;
     line-height: 18px;
     margin-bottom: 6px;
 }
-
+.listing h3 a{
+    color:black;
+}
 .listing time{
     display:block;
     border-top: 1px solid #ccc;
