--- a/layout/base.j2
+++ b/layout/base.j2
@@ -57,7 +57,7 @@
           <header class="banner clearfix">
           {% block header -%}
             <h1>Jim Faes</h1>
-            <h3>A hyde website</h3>
+            <h3>I do stuff with computers and without.</h3>
           {%- endblock %}
           {% block nav %}
           {% from "macros.j2" import render_nav with context %}
