--- a/deploy/media/css/site.css
+++ b/deploy/media/css/site.css
@@ -1,407 +1,386 @@
 * {
-    vertical-align: baseline;
-    font-weight: inherit;
-    font-family: inherit;
-    font-style: inherit;
-    text-decoration:inherit;
-    font-size: 100%;
-    padding: 0;
-    border: 0;
-    margin: 0;
+  vertical-align: baseline;
+  font-weight: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  text-decoration: inherit;
+  font-size: 100%;
+  padding: 0;
+  border: 0;
+  margin: 0;
 }
 
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-    display:block;
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
 }
 
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
 
 :focus {
-    outline: 0;
+  outline: 0;
 }
 
 ::-moz-focus-inner {
-    border: 0;
+  border: 0;
 }
 
 /* clearfix */
 .clear:after {
-    content: ".";
-    display: block;
-    clear: both;
-    visibility: hidden;
-    line-height: 0;
-    height: 0;
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
 }
 
 .clear {
-    display: block;
+  display: block;
 }
 
-
 * html .clear {
-    height: 1%;
+  height: 1%;
 }
 
 a {
-color: #37e;
-       text-decoration: underline;
+  color: #BBA500;
+  text-decoration: underline;
 }
 
-a:hover{
-color: #222;
-  }
-
-body{
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background-color: #efefef;
-padding: 0;
-margin: 0;
+a:hover {
+  color: #222;
 }
 
-#container{
-    background-color: #eaeaea;
-width: 647px;
-margin: 0 auto;
-padding: 12px;
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #F7F7F7;
+  padding: 0;
+  margin: 0;
 }
 
-footer{
-    font-size: 10px;
-    text-align: center;
-    margin-top: 24px;
-    text-shadow: 0px 2px 0px #fff;
+#container {
+  background-color: #fff;
+  width: 647px;
+  margin: 0 auto;
+  padding: 0 12px 12px 12px;
+}
+
+footer {
+  font-size: 10px;
+  text-align: center;
+  margin-top: 24px;
+  text-shadow: 0px 2px 0px #fff;
 }
 
 /* Button styles from the awesome: http://www.webdesignerwall.com/demo/css-buttons.html */
 
 .button {
-display: inline-block;
-zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */
-      *display: inline;
-      vertical-align: baseline;
-margin: 0 2px;
-outline: none;
-cursor: pointer;
-        text-align: center;
-        text-decoration: none;
-font: 14px/100% Arial, Helvetica, sans-serif;
-padding: .5em 2em .55em;
+  display: inline-block;
+  zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */
+  *display: inline;
+  vertical-align: baseline;
+  margin: 0 2px;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  font: 14px/100% Arial, Helvetica, sans-serif;
+  padding: .5em 2em .55em;
 }
+
 .button:hover {
-    text-decoration: none;
-}
-.button:active {
-position: relative;
-top: 1px;
+  text-decoration: none;
 }
 
 .bigrounded {
-    -webkit-border-radius: 2em;
-    -moz-border-radius: 2em;
-    border-radius: 2em;
-}
-.medium {
-    font-size: 12px;
-padding: .4em 1.5em .42em;
-}
-.small {
-    font-size: 11px;
-    padding: .2em 1em .275em;
+  -webkit-border-radius: 2em;
+  -moz-border-radius: 2em;
+  border-radius: 2em;
 }
 
+.medium {
+  font-size: 12px;
+  padding: .4em 1.5em .42em;
+}
+
+.small {
+  font-size: 11px;
+  padding: .2em 1em .275em;
+}
 
 /* white */
 .white {
-    color: #606060;
+  color: #606060;
 }
+
 .white:hover {
-    background: #ededed;
+  background: #ededed;
 }
+
 .white:active {
-    color: #999;
+  color: #999;
 }
 
-.banner{
-    border-bottom: 2px solid #222;
-    padding: 0 12px;
-    position: relative;
+.banner {
+  border-bottom: 2px solid #222;
+  padding: 0 12px;
+  position: relative;
 }
 
-.banner h1{
-    font-weight: 100;
-    font-size: 32px;
-    line-height: 48px;
+.banner h1 {
+  font-weight: 100;
+  font-size: 32px;
+  line-height: 48px;
+  margin-bottom:20px;
+  padding-top:10px;
 }
 
-
-.banner h3{
-    color: #666;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    margin-bottom: 12px;
+.banner h3 {
+  color: #666;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 12px;
 }
 
-.banner nav{
-    position: absolute;
-    right: 0;
-    bottom: 0;
+.banner nav {
+  position: absolute;
+  right: 0;
+  bottom: 1px;
 }
 
-.banner nav li{
-    list-style-type: none;
-    float: left;
+.banner nav li {
+  list-style-type: none;
+  float: left;
 }
 
-.banner nav li a.button{
-    margin:0;
+.banner nav li a.button {
+  margin: 0;
 }
 
-.banner nav li a.button:hover{
-    color: #000;
-}
-.banner nav li a.button.active{
-    color: #d7d7d7;
-    background: #333;
+.banner nav li a.button:hover {
+  color: #000;
 }
 
-.blog_excerpt{
-    padding-bottom: 24px;
+.banner nav li a.button.active {
+  color: #d7d7d7;
+  background: #333;
 }
 
-.blog_excerpt .post time{
-    float: none;
-    clear: left;
+.blog_excerpt {
+  padding-bottom: 24px;
 }
 
-.blog_excerpt .button{
-    float: right;
+.blog_excerpt .post time {
+  float: none;
+  clear: left;
+}
+
+.blog_excerpt .button {
+  float: right;
 }
 
 .blog_excerpt h3,
-h1.title{
-    font-size: 24px;
-    line-height: 36px;
+h1.title {
+  font-size: 24px;
 }
 
-.blog_excerpt h3{
-    margin-bottom: 24px;
+.blog_excerpt h3 {
+  margin-bottom: 24px;
 }
 
-section.content{
-    padding: 12px;
+section.content {
+  padding: 24px 12px 12px 12px;
 }
 
 /* listing */
 
-.listing{
-    margin-top: 24px;
+.listing img {
+  width: 120px;
+  height: 120px;
 }
 
-.listing img{
-    width: 120px;
-    height: 120px;
+.listing li {
+  list-style-type: none;
+  margin-bottom: 24px;
 }
 
-.listing li{
-    background-color: #ededed;
-    list-style-type: none;
-    margin-bottom: 24px;
+.listing li:nth-child(2) {
+  margin-right: 0;
 }
 
-.listing li:nth-child(2){
-    margin-right: 0;
+.listing li:nth-child(3) {
+  clear: left;
 }
 
-.listing li:nth-child(3){
-    clear: left;
+.listing li p {
+  font-size: 1em;
+  margin-bottom: 5px;
 }
 
-.listing li p{
-    font-size: 1em;
-    margin-bottom: 12px;
+.listing h3 {
+  font-size: 1.4em;
+  line-height: 18px;
+  margin-bottom: 10px;
 }
 
+.listing h3 a {
+  color: black;
+}
 
-.listing h3{
-    font-size: 1.2em;
-    line-height: 18px;
-    margin-bottom: 6px;
-}
-.listing h3 a{
-    color:black;
-}
-.listing time{
-    display:block;
-    border-top: 1px solid #ccc;
-    padding-top: 4px;
-    font-size: 10px;
+.listing time {
+  display: block;
+  font-size: 12px;
+  color: #999;
 }
 
 /* Content */
 
-article.post p{
-    font-size: 12px;
-    line-height: 24px;
-    margin: 6px 0;
+article.post p {
+  font-size: 12px;
+  line-height: 24px;
+  margin: 6px 0;
 }
 
-article.post img{
-    display: block;
-    margin-bottom: 24px;
+article.post img {
+  display: block;
+  margin-bottom: 24px;
 }
 
-.post time{
-    font-size: 12px;
-    color: #999;
-    float:left;
-    margin-top: 6px;
+.post time {
+  font-size: 12px;
+  color: #999;
+  display:block;
+  margin:12px 0;
 }
 
-ul.tags{
-    margin-bottom: 24px;
-    text-align: right;
+ul.tags {
+  margin-bottom: 24px;
+  text-align: right;
 }
 
-ul.tags li{
-    list-style-type: none;
-    display: inline;
+ul.tags li {
+  list-style-type: none;
+  display: inline;
 }
 
-ul.tags li a{
-    color: #999;
-    text-decoration: none;
+ul.tags li a {
+  color: #999;
+  text-decoration: none;
 }
 
 h1.tag:before,
-ul.tags li a:before{
-    content: '\00AB';
+ul.tags li a:before {
+  content: '\00AB';
 }
 
 h1.tag:after,
-ul.tags li a:after{
-    content: '\00BB';
+ul.tags li a:after {
+  content: '\00BB';
 }
 
-ul.tags li a:hover{
-    color: #222;
+ul.tags li a:hover {
+  color: #222;
 }
 
-h1 a, h2 a, h3 a{
-    text-decoration: none;
+h1 a, h2 a, h3 a {
+  text-decoration: none;
 }
 
-nav.post_nav{
-    background-color: #efefef;
-    position: fixed;
-    width: 124px;
-    margin-left: -186px;
-    font-size: 12px;
-    padding: 12px;
-    padding-right: 24px;
-    -moz-box-shadow: 0px 2px 4px #ccc; /* FF3.5+ */
-    -webkit-box-shadow: 0px 2px 4px #ccc; /* Saf3.0+, Chrome */
-          box-shadow: 0px 2px 4px #ccc; /* Opera 10.5, IE 9.0 */
-              filter:  progid:DXImageTransform.Microsoft.dropshadow(OffX=12px, OffY=12px, Color='#ccc'); /* IE6,IE7 */
-          -ms-filter: "progid:DXImageTransform.Microsoft.dropshadow(OffX=12px, OffY=12px, Color='#ccc')"; /* IE8 */
-
+nav.post_nav {
+  background-color: #efefef;
+  font-size: 12px;
+  padding: 12px;
+  padding-right: 24px;
+  text-align: center;
+  position: relative;
+  margin-top:20px
+}
+a.prev:before {
+  content: '\00AB';
 }
 
-a.backlink{
-    display:block;
-    line-height: 24px;
-    margin-bottom: 12px;
-}
-
-a.backlink:before{
-    content: '\2190';
-}
-
-a.prev:before{
-    content: '\00AB';
-}
-
-a.next:after{
-    content: '\00BB';
-}
-
-a.prev{
-    margin-right: 12px;
+a.next:after {
+  content: '\00BB';
 }
 
 a.prev,
-a.next{
-    display: block;
-    float: left;
-    margin-bottom: 12px;
+a.next {
+  position:absolute;
+  top:12px;
 }
 
-a.next{ float: right };
-
-a.backlink:hover, a.prev:hover, a.next:hover{
-    color: #222;
+a.prev {
+  left:12px;
 }
 
-.post_nav a.disabled{
-    color: #ccc;
+a.next {
+  right:12px;
 }
 
-.post_nav a{
-    color: #666;
-    text-decoration: none;
-    text-shadow: 0px 2px 0px #fff;
+a.backlink:hover, a.prev:hover, a.next:hover {
+  color: #222;
 }
 
-.post_nav div{
-    display: block;
-    float: left;
-    width: 58px;
-    overflow: hidden;
-    margin-left: 4px;
+.post_nav a.disabled {
+  color: #ccc;
 }
 
-#facebook_like{
-    margin-top: 1px;
+.post_nav a {
+  color: #666;
+  text-decoration: none;
+  text-shadow: 0px 2px 0px #fff;
 }
 
-.archives ul.posts{
-    margin-top: 24px;
+.post_nav div {
+  display: block;
+  float: left;
+  width: 58px;
+  overflow: hidden;
+  margin-left: 4px;
 }
 
-.archives li.post{
-    list-style-type: none;
-    border-bottom: 1px dotted #ccc;
-    padding: 12px 0;
+#facebook_like {
+  margin-top: 1px;
+}
+
+.archives ul.posts {
+  margin-top: 24px;
+}
+
+.archives li.post {
+  list-style-type: none;
+  border-bottom: 1px dotted #ccc;
+  padding: 12px 0;
 
 }
 
-.archives li.post time{
-    color: #999;
-    text-shadow: 0px 2px 0px #fff;
-    margin-right: 24px;
-    display:block;
-    float: left;
-    width: 120px;
+.archives li.post time {
+  color: #999;
+  text-shadow: 0px 2px 0px #fff;
+  margin-right: 24px;
+  display: block;
+  float: left;
+  width: 120px;
 }
 
-.archives li.post a{
-    float: left;
+.archives li.post a {
+  float: left;
 }
 
-.archives ul.tags{
-    float: right;
-    margin-bottom:0;
+.archives ul.tags {
+  float: right;
+  margin-bottom: 0;
 }
-
 
 .codebox {
   margin-top: 8px;
   margin-bottom: 12px;
 }
+
 .code {
   position: relative;
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
@@ -410,6 +389,7 @@ a.backlink:hover, a.prev:hover, a.next:hover{
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
   background-color: #F0F3F3;
 }
+
 .code figcaption {
   font-size: 10px;
   position: absolute;
@@ -417,6 +397,7 @@ a.backlink:hover, a.prev:hover, a.next:hover{
   right: 12px;
   color: rgba(0, 0, 0, 0.5);
 }
+
 .highlight pre {
   font-size: 12px;
   padding: 16px 12px 12px;
