--- a/layout/blog.j2
+++ b/layout/blog.j2
@@ -2,29 +2,8 @@
 
 {% block main -%}
 <article class="post">
-<nav class="post_nav">
-<a class="backlink" href="{{ content_url(resource.node.url) }}">Back to list</a>
-<a class="prev{{' disabled' if not resource.prev_by_time }}"
-    title="{{ resource.prev_by_time.meta.title }}"
-    {% if resource.prev_by_time %}
-    href="{{ content_url(resource.prev_by_time.url) }}"{% endif %}>
-    Previous
-</a>
 
-<a class="next{{' disabled' if not resource.next_by_time }}"
-    title="{{ resource.next_by_time.meta.title }}"
-    {% if resource.next_by_time %}
-    href="{{ content_url(resource.next_by_time.url) }}"{% endif %}>
-    Next
-</a>
-
-<br>
-</nav>
-<h1 class="title">
-    <a href="{{ content_url(resource.url) }}">
-        {{ resource.meta.title }}
-    </a>
-</h1>
+<h1 class="title">{{ resource.meta.title }}</h1>
 <time datetime="{{ resource.meta.created.strftime('%Y-%m-%d') }}">
     Posted: {{ resource.meta.created.strftime('%a, %d %b %Y') }}
 </time>
@@ -45,6 +24,27 @@
 {% block post -%}{%- endblock %}
 {%- endmark %}
 {%- endfilter %}
+
+
+
 </article>
+<nav class="post_nav clear">
+
+  <a class="prev{{' disabled' if not resource.prev_by_time }}"
+     title="{{ resource.prev_by_time.meta.title }}"
+    {% if resource.prev_by_time %}
+     href="{{ content_url(resource.prev_by_time.url) }}"{% endif %}>
+    Previous
+  </a>
+  <a class="backlink" href="{{ content_url(resource.node.url) }}">Back to list</a>
+
+  <a class="next{{' disabled' if not resource.next_by_time }}"
+     title="{{ resource.next_by_time.meta.title }}"
+    {% if resource.next_by_time %}
+     href="{{ content_url(resource.next_by_time.url) }}"{% endif %}>
+    Next
+  </a>
+
+</nav>
 
 {%- endblock %}
