--- a/layout/macros.j2
+++ b/layout/macros.j2
@@ -10,6 +10,19 @@
 </article>
 {% endmacro %}
 
+{% macro render_excerpt_big(res, class=None) %}
+{% refer to res.url as post %}
+<article {{'class='~class if class }}>
+<h3><a href="{{ content_url(res.url) }}">{{ res.meta.title }}</a></h3>
+<a href="{{ content_url(res.url) }}">{{ post.image|markdown|typogrify }}</a>
+  <time datetime="{{ res.meta.created.strftime('%Y-%m-%d') }}">
+    Posted: {{ res.meta.created.strftime('%a, %d %b %Y') }}
+  </time>
+{{ post.excerpt|markdown|typogrify }}
+{{ res.meta.description|markdown|typogrify }}
+</article>
+{% endmacro %}
+
 {% macro render_nav(menu, cls=None) -%}
 {% if menu -%}
 <nav {{'class='~cls if cls }}>
